# Image_to_image_translation

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DATASET_GUIDE.md  DEPLOYMENT_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  __init__.py  create_datasets.py  demo_train.py  download_datasets.py  pyproject.toml  pytest.ini  requirements.txt  results.md  setup.cfg  setup.py  utils.py
.github/workflows/: quality.yml  tests.yml
algorithms/: __init__.py
algorithms/crn/: __init__.py  config.py  models.py
algorithms/cyclegan/: __init__.py  config.py  models.py
algorithms/pix2pix/: __init__.py  config.py
algorithms/pspnet/: __init__.py  config.py  models.py
comparisons/: RESULTS.md  comparison_metrics.py
examples/: quickstart.py
src/pix2pix/: __init__.py  config.py  dataset.py  inference.py  losses.py  metrics.py  models.py  train.py
tests/: conftest.py  test_dataset.py  test_models.py
